[gd_scene load_steps=10 format=3 uid="uid://bel5c2ap112f3"]

[ext_resource type="Script" path="res://scripts/main_game.gd" id="1_fmdvf"]
[ext_resource type="PackedScene" uid="uid://dnvjf1v5tew17" path="res://scenes/tilemap_test.tscn" id="1_ic1ht"]
[ext_resource type="PackedScene" uid="uid://c38v4mq3f77se" path="res://scenes/ui.tscn" id="2_j3bll"]

[sub_resource type="Animation" id="Animation_l0xuu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("prompt_move:theme_override_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("prompt_dash:theme_override_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("prompt_harvest:theme_override_colors/font_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("prompt_shoot:theme_override_colors/font_color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_5cns1"]
resource_name = "fade_out_dash"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("prompt_dash:theme_override_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_vfft1"]
resource_name = "fade_out_harvest"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("prompt_harvest:theme_override_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_f55ko"]
resource_name = "fade_out_move"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("prompt_move:theme_override_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_fepew"]
resource_name = "fade_out_shoot"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("prompt_shoot:theme_override_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_whkou"]
_data = {
"RESET": SubResource("Animation_l0xuu"),
"fade_out_dash": SubResource("Animation_5cns1"),
"fade_out_harvest": SubResource("Animation_vfft1"),
"fade_out_move": SubResource("Animation_f55ko"),
"fade_out_shoot": SubResource("Animation_fepew")
}

[node name="MAIN_GAME" type="Node2D"]
script = ExtResource("1_fmdvf")

[node name="TilemapTest" parent="." instance=ExtResource("1_ic1ht")]

[node name="player" parent="TilemapTest" index="2"]
position = Vector2(496, 544)

[node name="UI" parent="." instance=ExtResource("2_j3bll")]
offset_left = 45.0
offset_top = 16.0
offset_right = 45.0
offset_bottom = 16.0

[node name="prompt_move" type="Label" parent="."]
offset_left = 400.0
offset_top = 128.0
offset_right = 572.0
offset_bottom = 151.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "arrow keys to move!!!!"
horizontal_alignment = 1

[node name="prompt_dash" type="Label" parent="."]
offset_left = 400.0
offset_top = 176.0
offset_right = 572.0
offset_bottom = 199.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "C to dash!!!!"
horizontal_alignment = 1

[node name="prompt_harvest" type="Label" parent="."]
offset_left = 400.0
offset_top = 224.0
offset_right = 572.0
offset_bottom = 247.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "pick up the appels!!!!"
horizontal_alignment = 1

[node name="prompt_shoot" type="Label" parent="."]
offset_left = 336.0
offset_top = 264.0
offset_right = 640.0
offset_bottom = 339.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "she is here
press Z to shoot
(you cannot pick appels while shooting)"
horizontal_alignment = 1

[node name="ui_fader" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_whkou")
}

[node name="ui_fader2_since_i_cant_play_2_anims_at_once" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_whkou")
}

[editable path="TilemapTest"]
